--- a/templates/pdfgen/index.html
+++ b/templates/pdfgen/index.html
@@ -9,6 +9,7 @@
         Open resumes
     </title>
     <meta charset="utf-8">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}"  type="image/x-icon"/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <!-- Bootstrap CSS library -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
