--- a/templates/pdfgen/results.html
+++ b/templates/pdfgen/results.html
@@ -8,6 +8,7 @@
             Resume pdf
         </title>
         <meta charset ="utf-8">
+        <link rel="icon" href="{% static 'images/favicon.ico' %}"  type="image/x-icon"/>
         <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
         <!-- Bootstrap CSS library -->
     <link rel="stylesheet" href=
