--- a/templates/pdfgen/home.html
+++ b/templates/pdfgen/home.html
@@ -7,6 +7,7 @@
         <title>
             {{name}}-Home
         </title>
+        <link rel="icon" href="{% static 'images/favicon.ico' %}"  type="image/x-icon"/>
         <meta charset ="utf-8">
         
         <!-- Bootstrap CSS library -->
