--- a/templates/pdfgen/wrongIndex.html
+++ b/templates/pdfgen/wrongIndex.html
@@ -9,6 +9,7 @@
         Wrong index
     </title>
     <meta charset ="utf-8">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}"  type="image/x-icon"/>
         <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
         <!-- Bootstrap CSS library -->
     <link rel="stylesheet" href=
